# rustique

./: README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/kshitijpatil/rustique/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kshitijpatil/rustique/: ImageViewModel.kt  MainActivity.kt  Rustique.kt
android/app/src/main/java/com/kshitijpatil/rustique/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/kshitijpatil/rustique/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
docs/: High-level-flow.md  Setup.md
rustique/: .gitignore  Cargo.toml
rustique/src/: image.rs  lib.rs
