[package]
name = "rustique"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[dependencies]

[profile.release]
# Optimize for binary size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"